--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,14 @@ on: push
 jobs:
   test:
 	runs-on: ubuntu-18.04
-	container: 
+	container: ryuichiueda/ubuntu22.04-ros2:latest
 	steps:
+	  - uses: actions/checkout@v2
+	  - name: build and test
+		run: |
+		  rsync -av ./ /root/ros2_ws/src/mypkg/
+		  cd /root/ros2_ws
+		  rosdep update
+		  rosdep install -i --from-path src --rosdistro humble -y
+		  bash -xv ./src/mypkg/test/test.bash /root
 	
