--- a/package.xml
+++ b/package.xml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2022 YUki Sato s21C1056FY@s.chibakoudai.jp
+# SPDX-License-Identifier: BSD-3-Clause
+
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
