--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     container: ryuichiueda/ubuntu22.04-ros2:latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"] 
+        python-version: ["3.8"] 
     steps:
       - uses: actions/checkout@v2
       - name: build and test
